Ajuste na explanação sobre python

--- a/classes/1/class1.ipynb
+++ b/classes/1/class1.ipynb
@@ -16,7 +16,7 @@
     "### O que é o Python?\n",
     "    O Python é uma linguagem de programação dinamicamente tipada, o que significa que não é necessário declarar o tipo de variável ou fazer casting (mudar o tipo de variável). Essa linguagem traz diversos benefícios, o mais importante pra gente agora é a sua simplicidade para aprendizagem, quando comparada a outras.\n",
     "\n",
-    "Existem muitas aplicações possiveis para o Python entre elas as mais comuns estão:\n",
+    "Existem muitas aplicações possiveis para o Python entre as mais comuns estão:\n",
     "\n",
     "* Web Services\n",
     "* Data Science\n",
