Ajuste na explanação sobre variaveis

--- a/classes/1/class1.ipynb
+++ b/classes/1/class1.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### O que é o Python?\n",
+    "## O que é o Python?\n",
     "    O Python é uma linguagem de programação dinamicamente tipada, o que significa que não é necessário declarar o tipo de variável ou fazer casting (mudar o tipo de variável). Essa linguagem traz diversos benefícios, o mais importante pra gente agora é a sua simplicidade para aprendizagem, quando comparada a outras.\n",
     "\n",
     "Existem muitas aplicações possiveis para o Python entre as mais comuns estão:\n",
@@ -29,8 +29,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tipos de variáveis\n",
-    "    Os tipos de variáveis que iremos trabalhar nessa aula serão:\n",
+    "## Variáveis\n",
+    "    As variáveis são espaços em memória que utilizamos quando desenvolvemos algoritmos. Elas são as responsáveis por organizar os dados que iremos trabalhar, para isso cada uma delas é definida de acordo com a sua tipagem.\n",
+    "### Tipos de variáveis\n",
+    "    Existem diversos tipos de variaveis no Python, nessa aula utilizaremos as seguintes:\n",
     "\n",
     "Tipo  | Definição                                                                                       | Exemplo\n",
     "----- | ------------------------------------------------------------------------------------------------|-----------------------------------\n",
