Complementos da aula 1

--- a/classes/1/class1.ipynb
+++ b/classes/1/class1.ipynb
@@ -124,6 +124,186 @@
     "\n",
     "print(f'Hoje é domingo? {hojeÉDomingo}')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input\n",
+    "\n",
+    "    O input é uma função que é utilizada para receber do usuário um valor que pode ou não ser guardado em uma variável"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seu nome é ruty e você tem 23 anos\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Teste input\n",
+    "\n",
+    "nome = input(\"Digite seu nome\")\n",
+    "idade = input(\"Digite sua idade\")\n",
+    "\n",
+    "\n",
+    "print(f\"Seu nome é {nome} e você tem {idade} anos\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operações básicas\n",
+    "\n",
+    "Operação | Simbologia\n",
+    "-------- | ----------\n",
+    "Adição   | +\n",
+    "Subtração| -\n",
+    "Multiplicação | *\n",
+    "Divisão  | /\n",
+    "Mod(Resto)| %\n",
+    "Potenciação| **\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adição\n",
+    "calc = 20 + 1\n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subtração\n",
+    "calc = 23 - 1\n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiplicação\n",
+    "calc = 3 * 2\n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# divisão\n",
+    "calc = 20 + 2\n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mod\n",
+    "calc = 20 % 3 \n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Potenciação\n",
+    "calc = 2 ** 4\n",
+    "print(calc)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Desafios \n",
+    "    Partindo do que vimos hoje resolva os exercícios abaixo para treinar seus conhecimentos:\n",
+    "\n",
+    "1. Faça um programa que peça para o usuário inserir dois números, realize a multiplicação entre eles e mostre na tela o resultado.\n",
+    "2. Faça um programa que peça para o usuário inserir um número e mostre na tela o antecessor e sucessor do número inserido.\n",
+    "3. Faça um programa que receba nome, quantidade de horas trabalhadas, valor por hora trabalhada e calcule o salário desse funcionário. O salário deve ser exibido na tela indicando o quanto aquele funcionário receberá.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
